[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/dialogue_manager/example_balloon/example_balloon.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogue_manager/example_balloon/background.png" type="Texture" id=2]
[ext_resource path="res://addons/dialogue_manager/example_balloon/font_normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/dialogue_manager/example_balloon/font_italics.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/dialogue_manager/example_balloon/font_bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/dialogue_manager/dialogue_label.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.823529, 0.890196, 0.968627, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=9]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 3.0
content_margin_bottom = 3.0

[node name="ExampleBalloon" type="CanvasLayer"]
layer = 128
script = ExtResource( 1 )

[node name="Balloon" type="NinePatchRect" parent="."]
focus_mode = 2
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="Margin" type="MarginContainer" parent="Balloon"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Balloon/Margin"]
margin_left = 30.0
margin_top = 20.0
margin_right = 30.0
margin_bottom = 654.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Character" type="RichTextLabel" parent="Balloon/Margin/VBox"]
modulate = Color( 1, 1, 1, 0.470588 )
margin_bottom = 160.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Character"
meta_underlined = false
text = "Character"
fit_content_height = true
scroll_active = false

[node name="Dialogue" parent="Balloon/Margin/VBox" instance=ExtResource( 7 )]
margin_top = 165.0
margin_right = 0.0
margin_bottom = 629.0
rect_clip_content = false
mouse_filter = 1
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_text = "This is a bunch of dialogue!"
text = "This is a bunch of dialogue!"

[node name="Responses" type="VBoxContainer" parent="Balloon/Margin/VBox"]
margin_top = 634.0
margin_bottom = 634.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResponseTemplate" type="RichTextLabel" parent="."]
margin_left = 30.0
margin_top = 1015.0
margin_right = 1890.0
margin_bottom = 1060.0
rect_min_size = Vector2( 0, 45 )
size_flags_horizontal = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 3 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "test"
meta_underlined = false
text = "test"
scroll_active = false

[connection signal="gui_input" from="Balloon" to="." method="_on_Balloon_gui_input"]
